# RLAAS

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  rlaas-architecture.html
.github/workflows/: ci.yml  pages.yml  sdk-release.yml
api/openapi/: openapi.yaml
api/proto/: rlaas.pb.go  rlaas.proto  rlaas_grpc.pb.go
benchmarks/: evaluate_bench_test.go  http_api_bench_test.go  memory_store_bench_test.go
cmd/rlaas-agent/: main.go  main_test.go  sync_test.go
cmd/rlaas-server/: bootstrap_test.go  main.go  main_test.go
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: ai-ml.html  api-collections.html  api.html  architecture.html  compare.html  design.html  features.html  getting-started.html  index.html  providers.html  sdks.html
docs/ai-ml/: agent-guardrails.html  cost-budget.html  embeddings-rag.html  gpu-training.html  model-downgrade.html  streaming.html  token-budget.html
docs/collections/: rlaas-insomnia.json  rlaas-postman-collection.json  rlaas-postman-environment.json
docs/css/: style.css
docs/js/: nav.js
examples/: fidelity-policies.json  northwind-policies.json
examples/http/: main.go  main_test.go
internal/algorithm/: interface.go  stress_test.go
internal/analytics/: audit.go  audit_test.go  recorder.go  recorder_test.go
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/include/rlaas/: client.h
sdk/cpp/src/: client.cpp
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
(+126 files in other folders)
